<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardCornerRadius="40dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/character_image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imagecharacter" />


        <View
            android:id="@+id/view_separation"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="120dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/character_image"
            app:layout_constraintTop_toTopOf="@id/character_image" />


        <TextView
            android:id="@+id/character_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_name"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/view_separation"
            app:layout_constraintStart_toEndOf="@id/character_image" />

        <TextView
            android:id="@+id/character_gender_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/character_gender"
            app:layout_constraintStart_toEndOf="@id/character_image"
            app:layout_constraintTop_toBottomOf="@id/view_separation" />

        <TextView
            android:id="@+id/character_status_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/character_status"
            app:layout_constraintStart_toEndOf="@id/view_separation"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>